--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.ChattingActivity" />
+        <activity android:name=".activity.ImageActivity" />
     </application>
 
 </manifest>
